openbankproject-Devops/Kubernetes/PostgreSQL-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-bank-db
  namespace: open-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-bank-db
  template:
    metadata:
      labels:
        app: open-bank-db
    spec:
      containers:
        - name: postgres
          image: 
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
