openbankproject-Devops/Kubernetes/Resource Requests and Limits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-bank-api
  namespace: open-bank
spec:
  template:
    spec:
      containers:
        - name: open-bank-api
          image: open-bank-api:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
