openbankproject-Devops/Kubernetes/Api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: open-bank
spec:
  selector:
    app: api-gateway
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
