openbankproject-Devops/Kubernetes/Api-platform-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-bank-api
  namespace: open-bank
spec:
  selector:
    app: open-bank-api
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
