openbankproject-Devops/Kubernetes/PostgreSQL-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-bank-db
  namespace: open-bank
spec:
  selector:
    app: open-bank-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
